tests/sksl/errors/InterfaceBlockScope.glsl
### Compilation failed:

error: 3: unknown identifier 'x'
} test[x];
       ^
1 error
